@@ -1,3 +1,8 @@
+Mon Sep 20 11:42:58 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_component/component_ex_idl.cpp:
+          Don't generate typedef of the context, not needed at all
+
 Mon Sep 20 10:46:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * TAO_IDL/be/be_codegen.cpp:
